[package]
name = "sidecar"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.8.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
